# Web-base

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  mock_sql.sql  pyproject.toml  setup.cfg
app/: __init__.py  config.py  logging_config.py
app/routes/: __init__.py  main.py
app/templates/: index.html
backend/: __init__.py  config.py  db.py  error_handlers.py  logging_config.py
backend/constants/: field_names.py  field_order.py  paths.py
backend/models/: __init__.py  databases.py  sr_management.py
backend/parsers/: __init__.py  sr_management.py
backend/routes/: __init__.py  databases.py  sr_management.py
backend/serializers/: __init__.py  builder.py  formatters.py
backend/services/: databases.py  sr_management.py  utils.py
backend/validators/: __init__.py  sr_management.py
front/: index.html  style.css
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/database/: DatabaseList.tsx  ListItem.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/pages/: Main.tsx  Tables.tsx  TablesVariant.tsx
frontend/src/components/table/: CringeTable.tsx  CringeTables.tsx  Table.tsx
frontend/src/utils/: validators.ts
migrations/: env.py
migrations/versions/: b99c03b4a66f_add_sr_management_db_create_ot_records_.py  dc2a04734425_create_logical_databases_and_tables.py
