[project]
name = "web-base"
version = "0.1.0"
description = ""
authors = [
    {name = "Faizik12",email = "zerg9119@gmail.com"}
]
readme = "README.md"
packages = [{include = "app"}]
requires-python = "3.8.20"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "<7"
pytest = "<8.4.1"
isort = "<6.0.1"
